--- a/ChartVE Meta-evaluation.ipynb
+++ b/ChartVE Meta-evaluation.ipynb
@@ -77,22 +77,7 @@
     "        caption_label = int(caption_label)\n",
     "\n",
     "        for sentence, sent_labels in zip(sample[\"sentences\"], sample[\"labels\"]):\n",
-    "#             image_path = sample[\"image_path\"]\n",
-    "            if sample['dataset'] == 'pew':\n",
-    "                try:\n",
-    "                    table_type, image_id = img_id.replace('.txt','').split('_col-')\n",
-    "                except:\n",
-    "                    table_type, image_id = img_id.replace('.txt','').split('_col_')\n",
-    "                if table_type.startswith('two'):\n",
-    "                    root_image_path = \"/shared/nas/data/m1/khhuang3/mfec/data/Chart-to-text/pew_dataset/dataset/\"\n",
-    "                else:\n",
-    "                    root_image_path = \"/shared/nas/data/m1/khhuang3/mfec/data/Chart-to-text/pew_dataset/dataset/multiColumn\"\n",
-    "\n",
-    "                image_path=f\"{root_image_path}/imgs/{image_id}.png\"\n",
-    "\n",
-    "            else:\n",
-    "                image_path = f\"/shared/nas/data/m1/khhuang3/mfec/data/vistext/data/images/{img_id}.png\"\n",
-    "            \n",
+    "            image_path = sample[\"image_path\"]            \n",
     "            query = format_query(sentence)\n",
     "            sent_label = 0 if any([l in FACTUAL_ERROR_TYPES for l in sent_labels]) else 1\n",
     "            prompt =  \"<chartqa>  \" + query + \" <s_answer>\" \n",
@@ -113,8 +98,8 @@
     "    binary_positive_probs = []\n",
     "    with torch.no_grad():\n",
     "        for row in tqdm(processed_df.itertuples(), total=len(processed_df)):\n",
-    "#             img = Image.open(requests.get(row.image_path, stream=True).raw)\n",
-    "            img = Image.open(row.image_path)\n",
+    "            img = Image.open(requests.get(row.image_path, stream=True).raw)\n",
+    "            \n",
     "            pixel_values = processor(img.convert(\"RGB\"), random_padding=False, return_tensors=\"pt\").pixel_values\n",
     "            pixel_values = pixel_values.cuda()\n",
     "            decoder_input_ids = processor.tokenizer(row.prompt, add_special_tokens=False, return_tensors=\"pt\", max_length=510).input_ids.cuda()#.squeeze(0)\n",
